// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CarCard > renders CarCard with image 1`] = `
<div>
  <div
    class="rounded-lg border bg-white p-4 shadow-sm"
  >
    <div
      class="mb-4 h-32 overflow-hidden rounded-md bg-gray-200"
    >
      <img
        alt="Toyota Corolla 2024"
        class="h-full w-full object-cover"
        data-nimg="1"
        decoding="async"
        height="128"
        loading="lazy"
        src="/_next/image?url=https%3A%2F%2Fexample.com%2Fcar-image.jpg&w=640&q=75"
        srcset="/_next/image?url=https%3A%2F%2Fexample.com%2Fcar-image.jpg&w=384&q=75 1x, /_next/image?url=https%3A%2F%2Fexample.com%2Fcar-image.jpg&w=640&q=75 2x"
        style="color: transparent;"
        width="300"
      />
    </div>
    <h3
      class="mb-1 font-semibold"
    >
      Toyota Corolla 2024
    </h3>
    <p
      class="mb-2 text-sm text-gray-600"
    >
      $18,990
       • 
      Chileautos
    </p>
    <p
      class="text-sm text-gray-500"
    >
      15,000 km
       • 
      Gas
    </p>
    <a
      class="mt-4 block w-full rounded-md bg-blue-600 py-2 text-center text-sm text-white hover:bg-blue-700"
      href="/cars/test-car-id"
    >
      View Details
    </a>
  </div>
</div>
`;

exports[`CarCard > renders CarCard without image (shows fallback) 1`] = `
<div>
  <div
    class="rounded-lg border bg-white p-4 shadow-sm"
  >
    <div
      class="mb-4 h-32 overflow-hidden rounded-md bg-gray-200"
    >
      <div
        class="flex h-full w-full items-center justify-center text-gray-400"
      >
        No Image
      </div>
    </div>
    <h3
      class="mb-1 font-semibold"
    >
      Toyota Corolla 2024
    </h3>
    <p
      class="mb-2 text-sm text-gray-600"
    >
      $18,990
       • 
      Chileautos
    </p>
    <p
      class="text-sm text-gray-500"
    >
      15,000 km
       • 
      Gas
    </p>
    <a
      class="mt-4 block w-full rounded-md bg-blue-600 py-2 text-center text-sm text-white hover:bg-blue-700"
      href="/cars/test-car-id"
    >
      View Details
    </a>
  </div>
</div>
`;
